Fixed some wrongly aligned elements

--- a/static_files/css/styles.css
+++ b/static_files/css/styles.css
@@ -119,7 +119,9 @@ a
     width: 200px;
     border-radius: 10px;
     text-align: left;
-    padding-top: 15px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     padding-left: 5px;
 }
 
@@ -172,7 +174,7 @@ h2
 
 #page_navbar
 {
-    padding-top: 5px;
+    padding-top: 25px;
 }
 
 /* comments div */
